fix: horizontal scroll

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,6 @@
     font-family: 'Inter', Arial, sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    min-width: 320px;
     margin: 0 auto;
     padding: 0;
     background-color: #202020;
