--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    padding: 79px 0 20px;
+    padding: 83px 0 20px;
     font-size: 13px;
     font-weight: 400;
     line-height: 1.2;
@@ -51,9 +51,9 @@
     opacity: .6;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1296px) {
     .footer {
-        width: 100vw;
+        width: 100%;
     }
 }
 
