--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -6,8 +6,8 @@
     width: 1280px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1296px) {
     .movies__content {
-        width: 100vw;
+        width: 100%;
     }
 }
