--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,6 +1,6 @@
 .cards {
     margin: 0 70px 80px;
-    padding: 80px 0 0;
+    padding: 81px 0 0;
     border-top: 1px solid #424242;
     display: flex;
     flex-direction: column;
